--- a/project-2048.html
+++ b/project-2048.html
@@ -17,12 +17,12 @@
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
 
-      // TODO: replace with your Google Analytics profile ID.
+      // Optional TODO: replace with your Google Analytics profile ID.
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script async src="//www.google-analytics.com/analytics.js"></script>
-    <script async src="js/perfmatters.js"></script>
+    <script src="//www.google-analytics.com/analytics.js"></script>
+    <script src="js/perfmatters.js"></script>
   </head>
 
   <body>
@@ -38,7 +38,7 @@
 
       <div class="content">
 
-        <img class="img-responsive"  async src="http://cameronwp.github.io/udportfolio/img/2048.png">
+        <img class="img-responsive" src="http://cameronwp.github.io/udportfolio/img/2048.png">
 
         <p>Bacon ipsum dolor sit amet et pork belly porchetta excepteur dolor, laborum laboris magna labore dolore in fugiat beef ribs. Fugiat leberkas nulla do kevin dolore. Flank hamburger dolor swine prosciutto sirloin pig jerky sunt consequat pariatur. Mollit meatloaf nostrud laboris shoulder excepteur velit officia meatball nisi turkey. Nulla jowl spare ribs, et drumstick magna frankfurter.</p>
 
